objects/PL_CAL__c.object
<CustomObject>
    <fields>
        <fullName>Allocation_Type__c</fullName>
        <label>Allocation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>% of COST</fullName>
                </value>
                <value>
                    <fullName>% of NET SALES</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA__c</fullName>
        <label>Cost Allocation 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculate_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this row used in the View and Calculate Pages</description>
        <inlineHelpText>Is the percentage used in the PL Calculate page?</inlineHelpText>
        <label>Calculate Percentage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Allocation_Item__c</fullName>
        <formula>PL_MD__r.Cost_Allocation_Item__c</formula>
        <label>Cost Allocation Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Allocation__c</fullName>
        <formula>PL_MD__r.Cost_Allocation__c</formula>
        <label>Cost Allocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Migration_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PG_Name__c</fullName>
        <formula>Product_Group__r.PL_MD__r.Name</formula>
        <label>PG Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_MD__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Master Data</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PL_MD__c.MD_Type__c</field>
                <operation>equals</operation>
                <value>Cost Allocation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PL_MD__c</referenceTo>
        <relationshipLabel>Cost Allocations</relationshipLabel>
        <relationshipName>Cost_Allocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <referenceTo>PL_Product_Group__c</referenceTo>
        <relationshipLabel>Cost Allocations</relationshipLabel>
        <relationshipName>Cost_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <formula>PL_MD__r.Sort_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this row displayed on the P&amp;L Record Cost Allocations tab</description>
        <label>Summary Display</label>
        <type>Checkbox</type>
    </fields>
    <label>Cost Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Allocation_Type__c</columns>
        <columns>Cost_Allocation__c</columns>
        <columns>Cost_Allocation_Item__c</columns>
        <columns>L2I_Migration_External_Id__c</columns>
        <columns>PL_MD__c</columns>
        <columns>Percent__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Summary_Display__c</columns>
        <columns>Calculate_Display__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DSS</fullName>
        <columns>NAME</columns>
        <columns>Allocation_Type__c</columns>
        <columns>Cost_Allocation__c</columns>
        <columns>Cost_Allocation_Item__c</columns>
        <columns>PL_MD__c</columns>
        <columns>Percent__c</columns>
        <columns>PG_Name__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Summary_Display__c</columns>
        <columns>Calculate_Display__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>L2I_Migration_External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Group__c</field>
            <operation>equals</operation>
            <value>DSS</value>
        </filters>
        <label>DSS</label>
    </listViews>
    <listViews>
        <fullName>IFC_Hardware</fullName>
        <columns>NAME</columns>
        <columns>Allocation_Type__c</columns>
        <columns>Cost_Allocation__c</columns>
        <columns>Cost_Allocation_Item__c</columns>
        <columns>PL_MD__c</columns>
        <columns>Percent__c</columns>
        <columns>PG_Name__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Summary_Display__c</columns>
        <columns>Calculate_Display__c</columns>
        <columns>L2I_Migration_External_Id__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Group__c</field>
            <operation>equals</operation>
            <value>IFC Hardware</value>
        </filters>
        <label>IFC Hardware</label>
    </listViews>
    <listViews>
        <fullName>IFC_Services</fullName>
        <columns>NAME</columns>
        <columns>Product_Group__c</columns>
        <columns>Allocation_Type__c</columns>
        <columns>Cost_Allocation__c</columns>
        <columns>Cost_Allocation_Item__c</columns>
        <columns>PL_MD__c</columns>
        <columns>Percent__c</columns>
        <columns>Summary_Display__c</columns>
        <columns>Calculate_Display__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Group__c</field>
            <operation>equals</operation>
            <value>IFC Services</value>
        </filters>
        <label>IFC Services</label>
    </listViews>
    <listViews>
        <fullName>IFE_Hardware</fullName>
        <columns>NAME</columns>
        <columns>Calculate_Display__c</columns>
        <columns>Summary_Display__c</columns>
        <columns>Allocation_Type__c</columns>
        <columns>Cost_Allocation__c</columns>
        <columns>L2I_Migration_External_Id__c</columns>
        <columns>Cost_Allocation_Item__c</columns>
        <columns>PL_MD__c</columns>
        <columns>Percent__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Group__c</field>
            <operation>equals</operation>
            <value>IFE Hardware</value>
        </filters>
        <label>IFE Hardware</label>
    </listViews>
    <listViews>
        <fullName>IFE_Services</fullName>
        <columns>NAME</columns>
        <columns>Allocation_Type__c</columns>
        <columns>Cost_Allocation__c</columns>
        <columns>Cost_Allocation_Item__c</columns>
        <columns>PL_MD__c</columns>
        <columns>Percent__c</columns>
        <columns>PG_Name__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Summary_Display__c</columns>
        <columns>Calculate_Display__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Group__c</field>
            <operation>equals</operation>
            <value>IFE Services</value>
        </filters>
        <label>IFE Services</label>
    </listViews>
    <listViews>
        <fullName>PTS</fullName>
        <columns>NAME</columns>
        <columns>Allocation_Type__c</columns>
        <columns>Cost_Allocation__c</columns>
        <columns>Cost_Allocation_Item__c</columns>
        <columns>PL_MD__c</columns>
        <columns>Percent__c</columns>
        <columns>L2I_Migration_External_Id__c</columns>
        <columns>PG_Name__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Summary_Display__c</columns>
        <columns>Calculate_Display__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Group__c</field>
            <operation>equals</operation>
            <value>PTS</value>
        </filters>
        <label>PTS</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>